--- a/_posts/2024-08-03-iree_flow_4.md
+++ b/_posts/2024-08-03-iree_flow_4.md
@@ -48,12 +48,12 @@ author: taot
 
   func.func @test(%arg0: !hal.buffer_view, %arg1: !hal.buffer_view) -> !hal.buffer_view attributes {iree.abi.stub} {
     ...
-    %3 = stream.cmd.execute with(%0 as %arg2: !stream.resource<external>{%c40000000}, %1 as %arg3: !stream.resource<external>{%c40000000}, %2 as %arg4: !stream.resource<external>{%c400000}) {
-      stream.cmd.fill %c0_i8, %arg4[%c0 for %c400000] : i8 -> !stream.resource<external>{%c400000}
+    %3 = stream.cmd.execute with(%0 as %arg2: !stream.resource<external>[%c40000000], %1 as %arg3: !stream.resource<external>[%c40000000], %2 as %arg4: !stream.resource<external>[%c400000]) {
+      stream.cmd.fill %c0_i8, %arg4[%c0 for %c400000] : i8 -> !stream.resource<external>[%c400000]
       stream.cmd.dispatch @test_dispatch_0::@test_dispatch_0_generic_100000x100[%c100000, %c1] {
-        ro %arg2[%c0 for %c40000000] : !stream.resource<external>{%c40000000},
-        ro %arg3[%c0 for %c40000000] : !stream.resource<external>{%c40000000},
-        rw %arg4[%c0 for %c400000] : !stream.resource<external>{%c400000}
+        ro %arg2[%c0 for %c40000000] : !stream.resource<external>[%c40000000],
+        ro %arg3[%c0 for %c40000000] : !stream.resource<external>[%c40000000],
+        rw %arg4[%c0 for %c400000] : !stream.resource<external>[%c400000]
       }
     } => !stream.timepoint
     ...
@@ -83,12 +83,12 @@ author: taot
 
   func.func @test(%arg0: !hal.buffer_view, %arg1: !hal.buffer_view) -> !hal.buffer_view attributes {iree.abi.stub} {
     ...
-    %3 = stream.cmd.execute with(%0 as %arg2: !stream.resource<external>{%c40000000}, %1 as %arg3: !stream.resource<external>{%c40000000}, %2 as %arg4: !stream.resource<external>{%c400000}) {
-      stream.cmd.fill %c0_i8, %arg4[%c0 for %c400000] : i8 -> !stream.resource<external>{%c400000}
+    %3 = stream.cmd.execute with(%0 as %arg2: !stream.resource<external>[%c40000000], %1 as %arg3: !stream.resource<external>[%c40000000], %2 as %arg4: !stream.resource<external>[%c400000]) {
+      stream.cmd.fill %c0_i8, %arg4[%c0 for %c400000] : i8 -> !stream.resource<external>[%c400000]
       stream.cmd.dispatch @test_dispatch_0::@test_dispatch_0_generic_100000x100[%c100000, %c1] {
-        ro %arg2[%c0 for %c40000000] : !stream.resource<external>{%c40000000},
-        ro %arg3[%c0 for %c40000000] : !stream.resource<external>{%c40000000},
-        rw %arg4[%c0 for %c400000] : !stream.resource<external>{%c400000}
+        ro %arg2[%c0 for %c40000000] : !stream.resource<external>[%c40000000],
+        ro %arg3[%c0 for %c40000000] : !stream.resource<external>[%c40000000],
+        rw %arg4[%c0 for %c400000] : !stream.resource<external>[%c400000]
       } attributes {hal.interface.bindings = [#hal.interface.binding<0, 0>, #hal.interface.binding<0, 1>, #hal.interface.binding<0, 2>]}
     } => !stream.timepoint
     ...
@@ -107,10 +107,10 @@ author: taot
         %c0 = arith.constant 0 : index
         %0 = hal.interface.constant.load[0] : i32
         %1 = arith.index_castui %0 : i32 to index
-        %2 = hal.interface.binding.subspan set(0) binding(0) type(storage_buffer) offset(%c0) alignment(64) : !flow.dispatch.tensor<readonly:tensor<?xf32>>{%1}
-        %3 = hal.interface.binding.subspan set(0) binding(1) type(storage_buffer) offset(%c0) alignment(64) : !flow.dispatch.tensor<writeonly:tensor<?xf32>>{%1}
-        %4 = flow.dispatch.tensor.load %2, offsets = [0], sizes = [%1], strides = [1] : !flow.dispatch.tensor<readonly:tensor<?xf32>>{%1} -> tensor<?xf32>
-        flow.dispatch.tensor.store %4, %3, offsets = [0], sizes = [%1], strides = [1] : tensor<?xf32> -> !flow.dispatch.tensor<writeonly:tensor<?xf32>>{%1}
+        %2 = hal.interface.binding.subspan set(0) binding(0) type(storage_buffer) offset(%c0) alignment(64) : !flow.dispatch.tensor<readonly:tensor<?xf32>>[%1]
+        %3 = hal.interface.binding.subspan set(0) binding(1) type(storage_buffer) offset(%c0) alignment(64) : !flow.dispatch.tensor<writeonly:tensor<?xf32>>[%1]
+        %4 = flow.dispatch.tensor.load %2, offsets = [0], sizes = [%1], strides = [1] : !flow.dispatch.tensor<readonly:tensor<?xf32>>[%1] -> tensor<?xf32>
+        flow.dispatch.tensor.store %4, %3, offsets = [0], sizes = [%1], strides = [1] : tensor<?xf32> -> !flow.dispatch.tensor<writeonly:tensor<?xf32>>[%1]
         return
       }
       ```
@@ -120,9 +120,9 @@ author: taot
         %c0 = arith.constant 0 : index
         %0 = hal.interface.constant.load[0] : i32
         %1 = arith.index_castui %0 : i32 to index
-        %2 = hal.interface.binding.subspan set(0) binding(0) type(storage_buffer) offset(%c0) alignment(64) : memref<?xf32, #hal.descriptor_type<storage_buffer>>{%1}
+        %2 = hal.interface.binding.subspan set(0) binding(0) type(storage_buffer) offset(%c0) alignment(64) : memref<?xf32, #hal.descriptor_type<storage_buffer>>[%1]
         memref.assume_alignment %2, 64 : memref<?xf32, #hal.descriptor_type<storage_buffer>>
-        %3 = hal.interface.binding.subspan set(0) binding(1) type(storage_buffer) offset(%c0) alignment(64) : memref<?xf32, #hal.descriptor_type<storage_buffer>>{%1}
+        %3 = hal.interface.binding.subspan set(0) binding(1) type(storage_buffer) offset(%c0) alignment(64) : memref<?xf32, #hal.descriptor_type<storage_buffer>>[%1]
         memref.assume_alignment %3, 64 : memref<?xf32, #hal.descriptor_type<storage_buffer>>
         linalg.generic {indexing_maps = [affine_map<(d0) -> (d0)>, affine_map<(d0) -> (d0)>], iterator_types = ["parallel"]} ins(%2 : memref<?xf32, #hal.descriptor_type<storage_buffer>>) outs(%3 : memref<?xf32, #hal.descriptor_type<storage_buffer>>) {
         ^bb0(%in: f32, %out: f32):
